--- a/index.html
+++ b/index.html
@@ -42,33 +42,29 @@
         <button type="submit">Create Plan</button>
     </form>
 
-    <h1>Available Plans</h1>
-    <pre id="plans-list"></pre>
 
-    <h1>Available Customers</h1>
-    <pre id="customers-list"></pre>
 
     <h1>Subscribe to a Plan</h1>
     <form id="subscribe-form">
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" id="email" required>
+            <input type="email" id="email"  value="mustaphaibnel@gmail.com" required>
         </div>
         <div class="form-group">
             <label for="plan-id">Plan ID:</label>
-            <input type="text" id="plan-id" required>
+            <input type="text" id="plan-id" value="f923415c-9e9c-467f-a50d-7e294ad98f41" required>
         </div>
         <div class="form-group">
             <label for="user-id">User ID:</label>
-            <input type="text" id="user-id" required>
+            <input type="text" id="user-id" value="user-id-01" required>
         </div>
         <div class="form-group">
             <label for="resource-id">Resource ID:</label>
-            <input type="text" id="resource-id" required>
+            <input type="text" id="resource-id" value="resource-id-01" required>
         </div>
         <div class="form-group">
             <label for="user-type">User Type:</label>
-            <input type="text" id="user-type" required>
+            <input type="text" id="user-type" value="user-type-id-01" required>
         </div>
         <button type="submit">Subscribe</button>
     </form>
